# static_iiif

./: README.md  pyproject.toml
.github/workflows/: night-bot.yml
allmaps/: alabama-archives.json  mark.json  tamu-pre.json  tamu.json  texas.json  utk.json
collections/: abolition-now.json  cervantes-sample.json  discover-collections.json  interviews-with-the-artists.json  monroe.json  monroe_maps.json  primeros-libros.json  service-maps-demo.json  service-maps.json  sesq-new-dates.json  sesq-new.json  sesquicentennial.json  student-worker.json  tamu-presidential-visits.json  terminal_escape_full.json
generate/: generate.py
helpers/: create_iiif_collection_from_directory.py
manifests/: bg.json  maps_718.json  quick-audrey.json  quick-audrey2.json  ta_manifest.json  voyager_iiif.json
manifests/abolition_now/: 0001_TrayvonMartin.json  0001_anotherworldispossible.json  0001_anotherworldispossible_oo.png.json  0001_beyondprison_oo.jpg.json  0001_budgetpriorities.json  0001_budgetpriorities_oo.jpg.json  0001_goodnightmoon.json  0001_goodnightmoon_oo.jpg.json  0001_minneapolice.json  0001_minneapolice_oo.jpg.json  0001_minneapolice_oo1.png.json  0001_newbeginnings.json  0001_newbeginnings_oo.jpg.json  0001_newbeginnings_ru.png.json  0001_nothingwithoutus.json  0001_nothingwithoutus_oo.jpg.json  0001_prisonwalls.json  0001_prisonwalls_oo.jpg.json  0001_washingoneshands_oo.jpeg.json  0002_atimebeforepolice.json  0002_atimebeforepolice_oo.jpg.json  0003_beyondprison.json  (+921 more)
schemas/: json_schema.json
vtts/: rfta_art_73.caption_two.vtt  sample2.vtt  seipp.html
(+1424 files in other folders)
